--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,6 @@ authors = ["Andreas Kvas <kvas@tugraz.at>"]
 version = "0.1.0"
 
 [deps]
-BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
-CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
-Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
